fix overflow

--- a/api/public/css/stylesheet.css
+++ b/api/public/css/stylesheet.css
@@ -24,7 +24,7 @@ html, body {
     border: 1px solid blue;
     margin-right: 10px;
     padding: 10px;
-    overflow: auto;
+    overflow: visible;
 }
 
 .lastpicture {
